# euler

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  format.sh
cpp/: CMakeLists.txt  format.sh
cpp/cmake/: Functions.cmake
cpp/src/common/: CMakeLists.txt  EDefines.h
cpp/src/common/euler/: ENumberGrid.cpp  ENumberGrid.h  EPoker.h  ESpiral.cpp  ESudoku.cpp  ETriangleStructure.h  GridGraphUtils.h
cpp/src/common/graph/: Graph.cpp  Graph.h  dijkstra.h
cpp/src/common/math/: EFactorization.h  EMath.cpp  EMath.h  Math.cpp  Math.hpp
cpp/src/common/string/: Util.hpp
cpp/src/common/structs/: BitArray.cpp  BitArray.hpp  EGrid.h
cpp/src/common/types/: BigDecimal.hpp  EDigitInteger.cpp  EDigitInteger.h  ERomanNumeral.cpp
cpp/src/common/util/: AbsoluteValue.h  Bitwise.cpp  Bitwise.hpp  EBitwise.cpp  EBitwise.h  EString.h  Path.cpp  Path.hpp  Process.hpp
cpp/src/done/0001/: main.cpp
cpp/src/done/0004/: main.cpp
cpp/src/done/0005/: main.cpp
cpp/src/done/0009/: main.cpp
cpp/src/done/0011/: main.cpp
cpp/src/done/0013/: main.cpp
cpp/src/done/0016/: main.cpp
cpp/src/done/0017/: main.cpp
cpp/src/done/0019/: main.cpp
cpp/src/done/0020/: main.cpp
cpp/src/done/0022/: main.cpp
cpp/src/done/0023/: main.cpp
cpp/src/done/0025/: main.cpp
cpp/src/done/0027/: main.cpp
cpp/src/done/0028/: main.cpp
cpp/src/done/0030/: main.cpp
cpp/src/done/0031/: main.cpp
cpp/src/done/0032/: main.cpp
cpp/src/done/0034/: main.cpp
cpp/src/done/0041/: main.cpp
cpp/src/done/0042/: main.cpp
cpp/src/done/0043/: main.cpp
cpp/src/done/0045/: main.cpp
cpp/src/done/0046/: main.cpp
cpp/src/done/0047/: main.cpp
cpp/src/done/0050/: main.cpp
cpp/src/done/0052/: main.cpp
cpp/src/done/0054/: main.cpp
cpp/src/done/0056/: main.cpp
cpp/src/done/0059/: main.cpp
cpp/src/done/0062/: main.cpp
cpp/src/done/0063/: main.cpp
cpp/src/done/0065/: main.cpp
cpp/src/done/0066/: main.cpp
cpp/src/done/0067/: main.cpp
cpp/src/done/0069/: main.cpp
cpp/src/done/0071/: main.cpp
cpp/src/done/0073/: main.cpp
cpp/src/done/0074/: main.cpp
cpp/src/done/0081/: main.cpp
cpp/src/done/0089/: main.cpp
cpp/src/done/0092/: main.cpp
cpp/src/done/0099/: main.cpp
cpp/src/new/0061/: main.cpp
cpp/src/new/0070/: main.cpp
cpp/src/new/0072/: main.cpp
cpp/src/new/0085/: main.cpp
cpp/src/run/: euler-run.cpp
cpp/src/test/: CMakeLists.txt  euler-test.cpp
cpp/src/test/euler/: ENumberGridTest.cpp
cpp/src/test/graph/: GraphTest.cpp
cpp/src/test/math/: EMathTest.cpp  MathTest.cpp  PrimeSieveTest.cpp
libeuler/: CMakeLists.txt  Doxyfile  FindPCRE.cmake  Makefile  clean.sh  copy-release.sh  debug.sh  dir-prepare.sh  release.sh
libeuler/src/: EDefines.h  EExceptions.cpp  EExceptions.h  ETests.cpp
libeuler/src/euler/: ECircularPrimeSieve.cpp  ECircularPrimeSieve.h  EFastTotient.cpp  EFastTotient.h  ENumberGrid.cpp  ENumberGrid.h  EPoker.cpp  EPoker.h  ESpiral.cpp  ESpiral.h  ESudoku.cpp  ESudoku.h  ETriangleStructure.cpp  ETriangleStructure.h
libeuler/src/geodesy/: EGeoCoord.cpp  EGeoCoord.h  ELatLonValue.cpp  ELatLonValue.h
libeuler/src/graph/: EGridGraph.cpp  EGridGraph.h  EGridVertex.cpp  EGridVertex.h
libeuler/src/libeuler/: EDefines.h  EExceptions.cpp  EExceptions.h  ETests.cpp
libeuler/src/math/: EExactCover.cpp  EExactCover.h  EFactorization.cpp  EFactorization.h  EMath.cpp  EMath.h  EPrimeSieve.cpp  EPrimeSieve.h
libeuler/src/structs/: EGrid.h  EHashMap.h
libeuler/src/types/: EBigInteger.cpp  EBigInteger.h  EDigitInteger.cpp  EDigitInteger.h  EFraction.cpp  EFraction.h  ERightTriangle.cpp  ERightTriangle.h  ERomanNumeral.cpp  ERomanNumeral.h  ETriangle.cpp  ETriangle.h
libeuler/src/util/: EArray.h  EArrayUtilities.h  EBitwise.cpp  EBitwise.h  EByteArray.cpp  EByteArray.h  EDate.cpp  EDate.h  EProfiler.cpp  EProfiler.h  EString.cpp  EString.h
src/common/: CMakeLists.txt  EDefines.h  EExceptions.cpp  EExceptions.h
src/common/euler/: ECircularPrimeSieve.cpp  ECircularPrimeSieve.h  EFastTotient.cpp  EFastTotient.h  ENumberGrid.cpp  EPoker.cpp  EPoker.h  ESpiral.cpp  ESpiral.h  ESudoku.cpp  ESudoku.h  ETriangleStructure.cpp  GridGraphUtils.cpp  GridGraphUtils.h
src/common/fs/: Path.cpp  Path.hpp
src/common/geodesy/: EGeoCoord.cpp  EGeoCoord.h  ELatLonValue.cpp
src/common/graph/: Edge.cpp  Edge.h  Vertex.h  astar.h
src/common/math/: EExactCover.cpp  EFactorization.cpp  EMath.cpp  EMath.h  EPrimeSieve.cpp  EPrimeSieve.h  Math.cpp  Math.h  Math.hpp  PrimeSieve.cpp  PrimeSieve.hpp  floatCompare.hpp
src/common/string/: RegEx.cpp  RegEx.hpp  Util.cpp  Util.hpp
src/common/structs/: BitArray.cpp  BitArray.hpp  BitIterator.hpp
src/common/types/: EBigInteger.cpp  EBigInteger.h  EDigitInteger.cpp  EDigitInteger.h  EFraction.cpp  EFraction.h  ERightTriangle.cpp  ERightTriangle.h  ERomanNumeral.cpp  ERomanNumeral.h  ETriangle.cpp
src/common/util/: EArray.h  EBitwise.cpp  EBitwise.h  EByteArray.cpp  EByteArray.h  EString.cpp  Error.cpp  Error.hpp  Process.cpp  Process.hpp  Profiler.cpp  Profiler.h  Profiler.hpp  Terminal.cpp  Terminal.hpp  benchmark.cpp  benchmark.hpp
src/test/: CMakeLists.txt
src/test/geodesy/: EGeoCoordTest.cpp
src/test/graph/: GraphTest.cpp
src/test/math/: EMathTest.cpp  EPrimeSieveTest.cpp  MathTest.cpp
src/test/structs/: BitArrayTest.cpp  BitIteratorTest.cpp  EGridTest.cpp
src/test/types/: EDigitIntegerTest.cpp
src/test/util/: EArrayUtilitiesTest.cpp  EBitwiseTest.cpp
test/: CMakeLists.txt  Test.cpp
test/euler/: ECircularPrimeSieveTest.cpp  EFastTotientTest.cpp  ENumberGridTest.cpp  EPokerTest.cpp  ESpiralTest.cpp  ETriangleStructureTest.cpp
test/geodesy/: EGeoCoordTest.cpp
test/graph/: GraphTest.cpp
test/math/: EFactorizationTest.cpp  EMathTest.cpp  EPrimeSieveTest.cpp  MathTest.cpp
test/structs/: EGridTest.cpp
test/tests/graph/: GraphTest.cpp  GraphTest.h
test/tests/math/: MathTest.cpp  MathTest.h
test/types/: EDigitIntegerTest.cpp  EFractionTest.cpp  ERightTriangleTest.cpp  ETriangleTest.cpp
test/util/: EArrayTest.cpp  EArrayUtilitiesTest.cpp  EBitwiseTest.cpp  EByteArrayTest.cpp
(+351 files in other folders)
