[package]
name = "euler"
version = "0.1.0"
authors = ["Axel Rasmussen <axel.rasmussen1@gmail.com>"]

[dependencies]
atomic = "0.3"
bdrck = "0.4"
error-chain = "0.11"
glob = "0.2"
itoa = "0.3"
lazy_static = "1.0"
libc = "0.2"
num = "0.1"
num_cpus = "1.7"
pdqsort = "1.0"
rand = "0.3"
regex = "0.2"
rug = "0.9"
