[package]
name = "euler"
version = "0.1.0"
authors = ["Axel Rasmussen <axel.rasmussen1@gmail.com>"]

[dependencies]
atomic = "0.4"
bdrck = "0.4"
error-chain = "0.11"
glob = "0.2"
itoa = "0.4"
lazy_static = "1.2"
libc = "0.2"
num = "0.2"
num_cpus = "1.9"
pdqsort = "1.0"
rand = "0.6"
regex = "1.1"
rug = "1.2"
