[package]
name = "euler"
version = "0.1.0"
authors = ["Axel Rasmussen <axel.rasmussen1@gmail.com>"]
edition = "2018"

[dependencies]
atomic = "0.4"
failure = "0.1"
glob = "0.2"
itoa = "0.4"
lazy_static = "1.2"
libc = "0.2"
log = "0.4"
num = "0.2"
num_cpus = "1.9"
pdqsort = "1.0"
rand = "0.6"
regex = "1.1"
rug = "1.2"

[dependencies.bdrck]
version = "0.13"
default_features = false
features = ["flags", "logging"]
